# BookForge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: __init__.py  config.py  db.py  files.py  main.py  mimika_client.py  models.py  security.py  system_metrics.py  worker.py
app/static/: dashboard.js  styles.css  upload.js
app/templates/: base.html  dashboard.html  job_detail.html  login.html  mimika.html  settings.html  upload.html  voices.html
app/templates/partials/: dashboard_sections.html
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE.md  MACOS_LAUNCHD.md  MEMORY.md  OPERATIONS.md
scripts/: install.sh  run.sh
