[project]
name = "bookforge"
version = "0.1.0"
description = "Local macOS web wrapper for MimikaStudio audiobook generation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "BookForge contributors" },
]
keywords = ["audiobook", "tts", "mimikastudio", "fastapi", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/BookForge"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/BookForge"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/BookForge/issues"
MimikaStudio = "https://github.com/BoltzmannEntropy/MimikaStudio"

[tool.ruff]
line-length = 100
target-version = "py312"
